修改参数传递方法

--- a/NodeServer/fuckApp/views/index.ejs
+++ b/NodeServer/fuckApp/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Hello <%= content %></p>
     <p>项目首页</p>
   </body>
 </html>
